# cria_ficha_back

./: .pylintrc  pyproject.toml
src/: manage.py
src/fichas/: admin.py  models.py  serializer.py  serializers.py  views.py
src/fichas/migrations/: 0001_initial.py
src/fichas_back/: asgi.py  settings.py  urls.py  wsgi.py
